# plugins

./: .gitignore  .gitmodules  Makefile.am  acinclude.m4  autogen.sh  configure.ac
FritzCallMonitor/: FritzCallMonitor.cpp
FritzInfoMonitor/: parser.cpp
getrc/: io.c
input/: io.c
logomask/: io.c  logoset.h  text.c  text.h
scripts-lua/plugins/: Makefile.am
scripts-lua/plugins/ard_mediathek/: ard_mediathek.lua
scripts-lua/plugins/settingsupdater/: settingsupdater.lua
shellexec/: Makefile.am  shellexec.c
tuxcal/: tuxcal.h
tuxcom/: tuxcom.c  tuxcom.h
tuxmail/: Makefile.am  tuxmail.c
tuxwetter/: Makefile.am  parser.c  tuxwetter.c  tuxwetter.mcfg
